--- a/.github/workflows/deploy_to_render.yml
+++ b/.github/workflows/deploy_to_render.yml
@@ -113,9 +113,10 @@ jobs:
           fi
           exit $INVALID_API_KEYS
 
-      - name: Get Nomi Name from Nomi AI API
+      - name: Get Nomi Name from Nomi API
         env:
           NOMI_API_KEY: ${{ secrets.NOMI_API_KEY }}
+          NOMI_ID: ${{ secrets.NOMI_ID }}
         run: |
           set -e
           # Get Nomi name from Nomi ID
