--- a/.github/workflows/deploy_to_render.yml
+++ b/.github/workflows/deploy_to_render.yml
@@ -143,6 +143,7 @@ jobs:
           echo "NOMI_NAME=$NOMI_NAME" >> $GITHUB_ENV
 
       - name: Normalize Nomi Name
+        id: normalize-nomi-name
         run: |
           set -e
           if [ -z "$NOMI_NAME" ]; then
@@ -155,7 +156,7 @@ jobs:
             exit 1
           fi
           echo "Normalized Nomi Name: $NOMI_NAME_NORMALIZED"
-          echo "NOMI_NAME_NORMALIZED=$NOMI_NAME_NORMALIZED" >> $GITHUB_ENV
+          echo "NOMI_NAME_NORMALIZED=$NOMI_NAME_NORMALIZED" >> $GITHUB_OUTPUT
 
       - name: Get Service Name from render.yaml
         id: get-service-name
@@ -203,7 +204,9 @@ jobs:
             exit 1
           fi
 
-          MATCHES_SERVICE_NAME=$(echo "$RESPONSE_BODY" | jq -c '.[] | select(.blueprint.name == "$SERVICE_NAME")')
+          echo $RESPONSE_BODY
+
+          MATCHES_SERVICE_NAME=$(echo "$RESPONSE_BODY" | jq -c --arg NAME "$SERVICE_NAME" '.[] | select(.blueprint.name == $NAME)')
           echo "$MATCHES_SERVICE_NAME"
           if [ -z "$MATCHES_SERVICE_NAME" ]; then
             echo "No existing blueprints with the name $SERVICE_NAME were found."
@@ -263,8 +266,6 @@ jobs:
       - name: Update Environment Variables from GitHub Secrets
         env:
           SECRETS: ${{ toJSON(secrets) }}
-
-          # This isn't a secret, so isn't masked
           ENV_GROUP_ID: ${{ steps.check-existing-env-group.outputs.EXISTING_GROUP_ID }}
         run: |
           set -e
@@ -276,7 +277,40 @@ jobs:
             ENCODED_KEY=$(printf '%s' "$KEY" | jq -sRr @uri)
 
             # Ensure the value is properly escaped for JSON
-            VALUE=$(echo "$json" | jq -r --arg key "$key" '.[$key]')
+            VALUE=$(echo "$SECRETS" | jq -r --arg KEY "$KEY" '.[$KEY]')
+            VALUE_ESCAPED=$(printf '%s' "$VALUE" | jq -Rs '.')
+
+            RESPONSE=$(curl -s -w "%{http_code}" \
+              --request PUT \
+              --header "Authorization: Bearer $RENDER_API_KEY" \
+              --header "Content-Type: application/json" \
+              --data "{\"value\":$VALUE_ESCAPED}" \
+              --url "https://api.render.com/v1/env-groups/$ENV_GROUP_ID/env-vars/$ENCODED_KEY")
+            HTTP_STATUS="${RESPONSE: -3}"
+            RESPONSE_BODY="${RESPONSE::-3}"
+            if [ "$HTTP_STATUS" -ne 200 ]; then
+              echo "Error: Failed to update env var $KEY. HTTP Status: $HTTP_STATUS"
+              echo "Response: $RESPONSE_BODY"
+              exit 1
+            fi
+            echo "Successfully updated env var $KEY."
+          done
+
+      - name: Update Environment Variables from GitHub Secrets
+        env:
+          SECRETS: ${{ toJSON(secrets) }}
+          ENV_GROUP_ID: ${{ steps.check-existing-env-group.outputs.EXISTING_GROUP_ID }}
+        run: |
+          set -e
+
+          SECRETS_KEYS=$(echo "$SECRETS" | jq -r 'keys[]')
+
+          for KEY in $SECRETS_KEYS; do
+            # URL-encode the KEY
+            ENCODED_KEY=$(printf '%s' "$KEY" | jq -sRr @uri)
+
+            # Ensure the value is properly escaped for JSON
+            VALUE=$(echo "$SECRETS" | jq -r --arg KEY "$KEY" '.[$KEY]')
             VALUE_ESCAPED=$(printf '%s' "$VALUE" | jq -Rs '.')
 
             RESPONSE=$(curl -s -w "%{http_code}" \
