--- a/.github/workflows/deploy_to_render.yml
+++ b/.github/workflows/deploy_to_render.yml
@@ -8,7 +8,7 @@ on:
     inputs:
       environment:
         description: 'The Name of your Nomi'
-        required: False
+        required: false
         default: 'Giselle'
 
 jobs:
@@ -30,28 +30,28 @@ jobs:
           # Check if RENDER_API_KEY is populated
           if [ -z "$RENDER_API_KEY" ]; then
             echo "Error: DISCORD_API_KEY is not set or is empty. Please add it to your repository secrets."
-            $MISSING_VARS+=1
+            ((MISSING_VARS++))
           else
             echo "DISCORD_API_KEY is set."
           fi
           # Check if RENDER_API_KEY is populated
           if [ -z "$RENDER_API_KEY" ]; then
             echo "Error: RENDER_API_KEY is not set or is empty. Please add it to your repository secrets."
-            $MISSING_VARS+=1
+            ((MISSING_VARS++))
           else
             echo "RENDER_API_KEY is set."
           fi
           # Check if NOMI_API_KEY is populated
           if [ -z "$NOMI_API_KEY" ]; then
             echo "Error: NOMI_API_KEY is not set or is empty. Please add it to your repository secrets."
-            $MISSING_VARS+=1
+            ((MISSING_VARS++))
           else
             echo "NOMI_API_KEY is set."
           fi
           # Check if NOMI_ID is populated
           if [ -z "$NOMI_ID" ]; then
             echo "Error: NOMI_ID is not set or is empty. Please add it to your repository secrets."
-            $MISSING_VARS+=1
+            ((MISSING_VARS++))
           else
             echo "NOMI_ID is set."
           fi
@@ -73,7 +73,7 @@ jobs:
           RESPONSE_BODY="${RESPONSE::-3}"
           if [ "$HTTP_STATUS" -eq 401 ]; then
             echo "Error: Invalid Render API Key. Authentication failed."
-            $INVALID_API_KEYS+=1
+            ((INVALID_API_KEYS++))
           elif [ "$HTTP_STATUS" -ne 200 ]; then
             echo "Error: Failed to validate Render API Key. HTTP Status: $HTTP_STATUS"
             exit 1
@@ -91,7 +91,7 @@ jobs:
           RESPONSE_BODY="${RESPONSE::-3}"
           if [ "$HTTP_STATUS" -eq 400 ]; then
             echo "Error: Invalid Nomi API Key. Authentication failed."
-            $INVALID_API_KEYS+=1
+            ((INVALID_API_KEYS++))
           elif [ "$HTTP_STATUS" -ne 200 ]; then
             echo "Error: Failed to validate Nomi API Key. HTTP Status: $HTTP_STATUS"
             exit 1
@@ -109,7 +109,7 @@ jobs:
           RESPONSE_BODY="${RESPONSE::-3}"
           if [ "$HTTP_STATUS" -eq 400 ]; then
             echo "Error: Invalid Discord API Key. Authentication failed."
-            $INVALID_API_KEYS+=1
+            ((INVALID_API_KEYS++))
           elif [ "$HTTP_STATUS" -ne 200 ]; then
             echo "Error: Failed to validate Discord API Key. HTTP Status: $HTTP_STATUS"
             exit 1
