--- a/.github/workflows/deploy_to_render.yml
+++ b/.github/workflows/deploy_to_render.yml
@@ -15,9 +15,6 @@ jobs:
   deploy-nomi:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up environment variable
-        run: echo "ENVIRONMENT=${{ github.event_name == 'workflow_dispatch' && inputs.environment }}" >> $GITHUB_ENV
-
       - name: Checkout Repository
         uses: actions/checkout@v4
 
@@ -25,7 +22,7 @@ jobs:
         env:
           ${{ secrets }}
         run: |
-          set -e
+          set -x
           MISSING_VARS=0
           # Check if DISCORD_API_KEY is populated
           if [ -z "${DISCORD_API_KEY:-}" ]; then
